# ChangeLog for games-simulation/openttd
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/openttd/ChangeLog,v 1.21 2006/06/02 10:46:21 pylon Exp $

  02 Jun 2006; Lars Weiler <pylon@gentoo.org> openttd-0.4.7.ebuild:
  Only depend on media-libs/libsdl when no dedicated server is built; bug
  #131704.

  02 Jun 2006; Lars Weiler <pylon@gentoo.org> metadata.xml,
  openttd-0.4.7.ebuild:
  Add app-arch/unzip as dependency for scenarios-USE-flag; bug #132285.

  28 May 2006; Lars Weiler <pylon@gentoo.org> openttd-0.4.7.ebuild:
  Stable on ppc and x86.

*openttd-0.4.7 (26 Mar 2006)

  26 Mar 2006; Lars Weiler <pylon@gentoo.org> +openttd-0.4.7.ebuild:
  Hotfix release for 0.4.6; bug #127663.  The scenarios are also back now, but
  they will be installed with the scenario USE-flag only (not everybody wants
  to download the 4.7MB).  Thanks to Luca Spiller who found the
  scenario-package.

*openttd-0.4.6 (25 Mar 2006)

  25 Mar 2006; Lars Weiler <pylon@gentoo.org> +openttd-0.4.6.ebuild:
  With permission of the maintainer ebuild from bug #121532 added.

*openttd-0.4.0.1-r1 (31 Aug 2005)

  31 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  +files/openttd-0.4.0.1-buffer-checks.patch, +openttd-0.4.0.1-r1.ebuild:
  Version bump with security fix #102631 by Alexey Dobriyan.

  22 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  openttd-0.4.0.1.ebuild:
  Stable on ppc (bug 102631).

*openttd-0.4.0.1 (23 May 2005)

  23 May 2005; David Holm <dholm@gentoo.org> +openttd-0.4.0.1.ebuild:
  Version bumped, and added fixes for dedicated mode submitted by Luca Spiller
  <thelucster (at) gmail (dot) com> (Bug #93486)

*openttd-0.4.0 (16 May 2005)

  16 May 2005; David Holm <dholm@gentoo.org> -openttd-0.3.5.ebuild,
  -openttd-0.3.6.ebuild, openttd-0.3.6-r1.ebuild, +openttd-0.4.0.ebuild:
  Version bumped (Bug #92773)
  Marked 0.3.6-r1 stable on ppc

*openttd-0.3.6-r1 (12 Apr 2005)
