@@ -7,8 +7,9 @@ MD5 a169eb5c8572ee01be52c4accf2608a2 files/openttd.initd 529
 RMD160 ff9fdf7a787ae3d08ec4dbef1b1b37eee12d1ccd files/openttd.initd 529
 SHA256 a16e5c64a073d0b7e7092bb906b7f064414870a8607bebce16b4b08cff7f4112 files/openttd.initd 529
 DIST openttd-0.4.0.1-source.tar.gz 2950778
-DIST openttd-0.4.7-source-scenarios.zip 4969396 RMD160 d0a18925f6e06881d86217621dbe09a39d9f7543 SHA256 b6f3c2d65a28d7cbcbb0236ba88675ad2862dc953bd7cdc143fedb7271d68358
-DIST openttd-0.4.7-source.tar.bz2 2202261 RMD160 14817f7c87f8086a60f058b6d046ed2c6183e8d0 SHA256 a408328949909715042a2b803647d2261f37b82877052bda82992631da915565
+DIST openttd-0.4.7-source-scenarios.zip 4969396 RMD160 d0a18925f6e06881d86217621dbe09a39d9f7543 SHA1 c5c61b81721b275ed2d017c6a6044dbea81cec31 SHA256 b6f3c2d65a28d7cbcbb0236ba88675ad2862dc953bd7cdc143fedb7271d68358
+DIST openttd-0.4.7-source.tar.bz2 2202261 RMD160 14817f7c87f8086a60f058b6d046ed2c6183e8d0 SHA1 44bd917c1b583213c3998bf1bb33a1ed53a9e7be SHA256 a408328949909715042a2b803647d2261f37b82877052bda82992631da915565
+DIST openttd-0.4.8-RC1-source.tar.bz2 3876677 RMD160 a956fa20c03f0aa98b37fcc4d5b2feca19b8b153 SHA1 9851c07f804efc839cb476145823f44dc862b4fc SHA256 43f7f4c682999164ba6e3469cb595c54ffebaa567e0e8b7fb2e6143f061b951f
 EBUILD openttd-0.4.0.1-r1.ebuild 4349 RMD160 c7135e693ebe3910137e038be68b5701daacee82 SHA1 a976cdc8d80e146a94da35940762153065e23d65 SHA256 f614b93eebc09e2966f6f99bc722d363e8a24226b31d1107ac14c5f3d4a0ac66
 MD5 44e37a7863de4415a5b4506e41cac6cc openttd-0.4.0.1-r1.ebuild 4349
 RMD160 c7135e693ebe3910137e038be68b5701daacee82 openttd-0.4.0.1-r1.ebuild 4349
@@ -17,10 +18,14 @@ EBUILD openttd-0.4.7.ebuild 4961 RMD160 1fb8e9d905416c77149b5a2cba3301d3fd954691
 MD5 59779e011b80cfcca4ed5dd0151ee823 openttd-0.4.7.ebuild 4961
 RMD160 1fb8e9d905416c77149b5a2cba3301d3fd954691 openttd-0.4.7.ebuild 4961
 SHA256 84eb373e76aa973f4b92956d5175fbc267249d5dcdfca1b5bbe4cd657b1ce7b1 openttd-0.4.7.ebuild 4961
-MISC ChangeLog 3838 RMD160 79be8dc79f80e3b05f86a80b2f7c85beaf825f19 SHA1 a1b45011df4a5b3c77b3d7c89f1eb1430283624b SHA256 32c80ee27c5b381dd76b7832a29da995754dcc1304e7dc10aae765dc95a1be26
-MD5 248d2f8ac70c52abf98ca1bef8c91283 ChangeLog 3838
-RMD160 79be8dc79f80e3b05f86a80b2f7c85beaf825f19 ChangeLog 3838
-SHA256 32c80ee27c5b381dd76b7832a29da995754dcc1304e7dc10aae765dc95a1be26 ChangeLog 3838
+EBUILD openttd-0.4.8_rc1.ebuild 5075 RMD160 3031aabe4c57c2ddcb7b11b4717fdf874f71cb56 SHA1 c498937049623decd7c7e0763e13f3abbc4d53be SHA256 bd49ed8fbc80fb54287dfec6e116885f9439d2dc53ae9ef306078dbaa249e823
+MD5 7ac663ebc1b046a2d8fbef0c22e41ee6 openttd-0.4.8_rc1.ebuild 5075
+RMD160 3031aabe4c57c2ddcb7b11b4717fdf874f71cb56 openttd-0.4.8_rc1.ebuild 5075
+SHA256 bd49ed8fbc80fb54287dfec6e116885f9439d2dc53ae9ef306078dbaa249e823 openttd-0.4.8_rc1.ebuild 5075
+MISC ChangeLog 4093 RMD160 61edd042eced68d043b9cf724fe8a153b69b3237 SHA1 537eeb9f4ca1c4693cad3b72e4dbe2250aa2a125 SHA256 59cfa2860baf91ce18371d7ec98fdbc351ab02332ee1d760fff818263d567310
+MD5 9e114c7a09a2417273cc94b6a3d9a59c ChangeLog 4093
+RMD160 61edd042eced68d043b9cf724fe8a153b69b3237 ChangeLog 4093
+SHA256 59cfa2860baf91ce18371d7ec98fdbc351ab02332ee1d760fff818263d567310 ChangeLog 4093
 MISC metadata.xml 379 RMD160 58e5ec6d6482e2b60f3bdd99a26cb68ff16e0a3e SHA1 8b42b16535813e370be26ed1be6c97e947aca724 SHA256 8ba83d4305e1fa7698ab48d81f15053607da61690be4ec95e9c6a2aa499160c3
 MD5 255758e5fa9c77c52b49ed29dc311262 metadata.xml 379
 RMD160 58e5ec6d6482e2b60f3bdd99a26cb68ff16e0a3e metadata.xml 379
@@ -31,3 +36,6 @@ SHA256 c0add6a15064c39308b64eabdf2b03e893a4e21d3b71d184904b02d8baca0dbc files/di
 MD5 83c994f9799a4e6ca03d4223efc870b2 files/digest-openttd-0.4.7 554
 RMD160 1c3a503cf11fbd7a38983a4ae2d10a5455de9d52 files/digest-openttd-0.4.7 554
 SHA256 d4c9365a3eba4078de3859e3b7cc28a5d4d47d36da978669d564499d540b2c97 files/digest-openttd-0.4.7 554
+MD5 3d4157c26d1e89abb9fa845467dba2b8 files/digest-openttd-0.4.8_rc1 566
+RMD160 b08102790f6f66e55d543c30cafa0dd2865ad4cd files/digest-openttd-0.4.8_rc1 566
+SHA256 97013c752dafed766395f12f9ce150898f95522684e2217d814895a05a7f4bd4 files/digest-openttd-0.4.8_rc1 566
