@@ -1,0 +1,6 @@
+MD5 e64a3599f81409adfacf1699a2eeee3e openttd-0.4.7-source-scenarios.zip 4969396
+RMD160 d0a18925f6e06881d86217621dbe09a39d9f7543 openttd-0.4.7-source-scenarios.zip 4969396
+SHA256 b6f3c2d65a28d7cbcbb0236ba88675ad2862dc953bd7cdc143fedb7271d68358 openttd-0.4.7-source-scenarios.zip 4969396
+MD5 7c20c9803c25854f7142290f03d4f91b openttd-0.4.8-RC1-source.tar.bz2 3876677
+RMD160 a956fa20c03f0aa98b37fcc4d5b2feca19b8b153 openttd-0.4.8-RC1-source.tar.bz2 3876677
+SHA256 43f7f4c682999164ba6e3469cb595c54ffebaa567e0e8b7fb2e6143f061b951f openttd-0.4.8-RC1-source.tar.bz2 3876677
